[package]
name = "crabkeeper"
version = "0.1.1"
authors = ["micziz"]
license = "MIT OR Apache-2.0"
description = "A minimal PassWord Keeper/Manager"
readme = "README.md"
homepage = "https://github.com/micziz/crabkeeper"
repository = "https://github.com/micziz/crabkeeper"
keywords = ["cli", "passwords"]
categories = ["command-line-utilities"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
